changes on alignment and corrections

--- a/style_aboutme.css
+++ b/style_aboutme.css
@@ -40,8 +40,7 @@ header {
   justify-content: space-between;
   width: 100%;
   border-bottom: 1px solid rgba(0, 0, 0, 0.1);
-  background-color: #030710;
-  color: white;
+  background-color: #000;
   .logo-holder {
     display: flex;
     padding: 10px;
@@ -63,12 +62,13 @@ header {
     }
     .logo-text {
       flex: 1;
-      padding-left: 15px;
-      color: var(--base-100);
-      font-family: Marko One;
-      font-size: 32px;
-      font-weight: 400;
-      line-height: 42.91px;
+      padding-left: 44px;
+      color: #FFF;
+font-family: "Marko One";
+font-size: 32px;
+font-style: normal;
+font-weight: 400;
+line-height: normal;
       text-align: left;
     }
   }
@@ -82,7 +82,6 @@ header {
       list-style-type: none;
       gap: 5px;
       margin: 0;
-
       li {
         display: inline-block;
 
@@ -90,11 +89,18 @@ header {
           display: inline-block;
           padding: 10px 20px;
           color: var(--base-100);
+          font-family: Montserrat;
+font-size: 14px;
+font-weight: 500;
           &:hover {
             background-color: var(--base);
-            border-radius: 10px;
+            border-radius: 24px;
             text-decoration: none;
           }
+          .selected{
+            border-bottom: 2px solid;
+            background: var(--gradient, linear-gradient(90deg, #F10E7F 0%, #A41EAC 49%, #532EDB 100%));
+         }
         }
       }
     }
@@ -145,7 +151,7 @@ header {
   background: url("./imgs/bg-gradient.png") lightgray -20.067px 0px / 102.778% 149.02%
     no-repeat;
   padding-top: 78px;
-  padding-bottom: 96px;
+  padding-bottom: 98px;
   .text-container {
     div {
       color: #e3e1e1;
@@ -204,8 +210,8 @@ header {
 
 .journey {
   background: #eaeaff;
-  padding-top: 78px;
-  padding-bottom: 96px;
+  padding-top: 40px;
+  padding-bottom: 40px;
   .mcj {
     font-family: "Montserrat Alternates";
     font-size: 48px;
@@ -226,8 +232,8 @@ header {
 
 .weekends {
   background: var(--BG, linear-gradient(90deg, #040428 -1.63%, #00000a 100%));
-  padding-top: 78px;
-  padding-bottom: 96px;
+  padding-top: 76px;
+  padding-bottom: 76px;
 
   .container {
     display: flex;
@@ -329,16 +335,15 @@ header {
   }
   .tile {
     border-radius: 15px;
-    border: 1px solid rgba(255, 255, 255, 0.5);
-    background: rgba(77, 77, 77, 0.1);
-    backdrop-filter: blur(27.5px);
+    background: #21293D;
+backdrop-filter: blur(27.5px);
     /* padding-bottom: 10px;
     padding-left: 10px;
     padding-right: 10px;
     margin-bottom: 30px; */
-    padding: 16px;
-    width: 294px;
-    display: flex;
+    padding: 18px;
+    width: 270px;
+    display: block;
     gap: 10px;
     height: 100%;
     flex-direction: column;
@@ -346,17 +351,17 @@ header {
       /* padding-bottom: 10px;
       padding-left: 13%;
       padding-top: 10px; */
-      width: 257px;
-      height: 333px;
+      width: 230px;
+      height: 310px;
     }
     h4 {
-      color: #bcbbbb;
-      font-family: Montserrat;
-      font-size: 24px;
-      font-style: normal;
-      font-weight: 500;
-      line-height: normal;
-      text-align: center;
+      color: #BCBBBB;
+font-family: Montserrat;
+font-size: 24px;
+font-style: normal;
+font-weight: 700;
+line-height: normal;
+text-align: center;
     }
     p {
       color: #e4e4e4;
@@ -372,7 +377,7 @@ header {
 
 .moreaboutme {
   background: linear-gradient(90deg, #040428 -1.63%, #00000a 100%);
-  padding-bottom: 30px;
+  padding-bottom: 80px;
   padding-top: 10px;
   a {
     display: flex;
@@ -391,6 +396,19 @@ header {
     text-align: center;
     padding-bottom: 20px;
   }
+  .seperator {
+    width: 1080px;
+    height: 0.5px;
+    background: linear-gradient(
+      90deg,
+      rgba(4, 3, 34, 0.8) 0%,
+      rgba(255, 255, 255, 0.8) 48%,
+      rgba(1, 0, 6, 0.57) 100%
+    );
+    margin-bottom: 30px;
+    margin-top: 20px;
+    margin-left: 90px;
+  }
   p {
     color: #eeeef0;
     font-family: Montserrat;
@@ -406,6 +424,9 @@ header {
     );
     padding: 10px;
     max-width: 260px;
+    &:hover{
+      border: 2px solid var(--gradient, #f10e7f);
+    }
   }
 }
 
@@ -422,10 +443,14 @@ header {
   line-height: normal;
   text-align: center;
   border-radius: 24px;
+  margin-left: 15px;
   background: var(
     --gradient,
     linear-gradient(90deg, #f10e7f 0%, #a41eac 49%, #532edb 100%)
   );
   padding: 10px;
   width: 140px;
+  &:hover{
+    border: 2px solid var(--gradient, #f10e7f);
+  }
 }
